--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=SpringDatabase
+#mysqlDb
+spring.datasource.password=root
+spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+spring.jpa.hibernate.ddl-auto=create
+#MongoDb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+
