--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.hibernate.ddl-auto=create
 #MongoDb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+# ??????????? ?? ???????????? ?????? ?????
+spring.servlet.multipart.max-file-size=5MB
 
