--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.hibernate.ddl-auto=create
 #MongoDb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-# ??????????? ?? ???????????? ?????? ?????
+# max size of upload file
 spring.servlet.multipart.max-file-size=5MB
+
+# delay for scheduled task
+schedule.work=5000
 
