--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.servlet.multipart.max-file-size=5MB
 # delay for scheduled task
 schedule.work=5000
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+rabbitmq.exchange=myrabbitmq.direct
+rabbitmq.routing=myrabbitmq.routingkey
+rabbitmq.queue=myrabbitmq.queue
