--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,12 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
+# rabbitMq
 rabbitmq.exchange=myrabbitmq.direct
 rabbitmq.routing=myrabbitmq.routingkey
 rabbitmq.queue=myrabbitmq.queue
+
+# activeMq
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
